# weather_app_cli

./: .gitignore  Cargo.toml  README.md
migrations/2024-09-07-141740_create_notes/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/lib/: lib.rs
src/lib/config/: config.ini
src/lib/controllers/: home.rs
src/lib/db/: models.rs  schema.rs
src/lib/db/migrations/2023-04-21-205904_create_items/: up.sql
src/routes/: mod.rs  note.rs
