[package]
name = "note_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5" 
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13.3"
diesel = { version = "2.0.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15"