[package]
name = "note_app"
src= "src/main.rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "note_app_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers", "macros"] }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.2.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
serde_json = "1.0.96"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }
reqwest = "0.11.16"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
bson = "2.6.1"
