[package]
name = "weather_app_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["blocking", "json"] }


